--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@prisma/client": "^5.19.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
