--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/react": "^18.3.8",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.7",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "postcss": "^8.4.47",
     "prisma": "^5.19.1",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.13"
   }
 }
