--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.13",
     "react": "^18.3.1",
